--- a/nfl.html
+++ b/nfl.html
@@ -94,11 +94,11 @@
 
                 <!-- Matches -->
 
-<div class='match-box' data-iframe='https://topembed.pw/channel/ESPN2[Argentina]'>
+<div class='match-box' data-iframe='https://topembed.pw/channel/TSN4[Canada]'>
     <div class='match-header'>NFL</div>
-    <div class='teams'><img src='https://a.espncdn.com/i/teamlogos/nfl/500/scoreboard/chi.png'
-            alt='logo' /><span>Chicago Bears vs Minnesota Vikings</span><img
-            src='https://a.espncdn.com/i/teamlogos/nfl/500/scoreboard/min.png' alt='logo' /></div>
+    <div class='teams'><img src='https://a.espncdn.com/i/teamlogos/nfl/500/scoreboard/gb.png' alt='logo' /><span>Green
+            Bay Packers vs Washington Commanders</span><img
+            src='https://a.espncdn.com/i/teamlogos/nfl/500/scoreboard/wsh.png' alt='logo' /></div>
     <div class='match-info'>
         <div class='date-container'><svg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg' width='16'
                 height='16'>
@@ -108,13 +108,13 @@
                 <rect x='6' y='12' width='3' height='3' rx='0.5' fill='#fff' />
                 <rect x='10.5' y='12' width='3' height='3' rx='0.5' fill='#fff' />
                 <rect x='15' y='12' width='3' height='3' rx='0.5' fill='#fff' />
-            </svg><span>September 08, 2025</span></div>
+            </svg><span>September 11, 2025</span></div>
         <div class='time-container'><svg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg' width='16'
                 height='16'>
                 <path
                     d='M12 7V12L14.5 10.5M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z'
                     stroke='#fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' />
-            </svg><span>08:15 PM ET</span></div>
+            </svg><span>08:15 PM GMT</span></div>
     </div>
 </div>
                 
