--- a/watch.html
+++ b/watch.html
@@ -26,7 +26,7 @@
     </header>
 
     <div style="display: flex; justify-content: center; margin-top: 40px;">
-        <a href="https://discord.com/invite/nbyQnTqN" target="_blank" style="
+        <a href="https://discord.gg/drGfsqfb" target="_blank" style="
     display: inline-flex;
     align-items: center;
     gap: 10px;
@@ -175,6 +175,7 @@
 </body>
 
 </html>
+
 
 
 
