--- a/watch.html
+++ b/watch.html
@@ -88,7 +88,7 @@
 <script type="text/javascript" src="//www.highperformanceformat.com/50f0e4965a33420f406fc79aaf3d9aa5/invoke.js"></script>
                 </div>
                 <div class="iframe-container">
-                    <iframe id="player" src=""></iframe>
+                                       <iframe id="player" src="" allowfullscreen allow="encrypted-media"></iframe>
 
                 </div>
                 <div class="ad-center">
@@ -175,6 +175,7 @@
 </body>
 
 </html>
+
 
 
 
